# pp

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  Dockerfile_god  Dockerfileback  README.md  SKILL.md  alembic.ini  compose.yml  default.conf  docker-compose.yml  pp_backend_reqs.txt  pp_txtui_reqs.txt  pyproject.toml  pytest.ini  requirements.txt
.evolution/: evol-admin-rbac.md  evol-db-optimization.md  evol-db-redesign.md  evol-docker-ci.md  evol-jwt-auth.md  evol-jwt-refresh.md  evol-jwt-security.md  evol-observability.md  evol-project-baseline-and-roadmap.md  evol-route-split.md  evol-test-infrastructure.md  evol-typed-cache-outputs.md  evol-websocket-resilience.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 1199984eda18_.py  190cfa3bcb53_.py  3f258907f6e5_.py  a4b6c8d0e1f2_add_is_admin_to_userinfo.py  d8b3a1c2f4e5_db_redesign.py  e82877344456_.py
benchmarks/: locustfile.py  run_locust_compose.sh
docs/: api-documentation.md  project-documentation.md
html/: .gitignore
pp_ascii/: pp.tcss  textualpp.py
pp_ascii_docker/: Dockerfile  environment  sshd_config
pp_god/: Dockerfile_god  default.conf
pp_godot/: Dockerfile_godot  default.conf
ppback/: apiclient.py  config.py  deps.py  init_db.py  init_tracing.py  logging_config.py  main.py  ppschema.py  thedummyAPI.py  thedummyclient.py  wsocket.py
ppback/db/: db_connect.py  (+2 more)
ppback_docker/: Dockerfileback  pp_backend_reqs.txt
tests/: conftest.py  test_api_admin.py  test_api_convs.py  test_api_messages_ws.py  test_api_users.py  test_cache_types.py  test_health.py
(+17 files in other folders)
